2008-08-01
----------

Fixes:

   + Problem marker renamed from "Scave Problem" to "Result File Problem".

2008-07-18
----------

Fixes:

   + False numUnrecognizedLines reported by scavetool.

   + Filter node descriptions are revised.

   + Rename "x" and "xprev" parameter names in ExpressionFilterNode.
     New names are "t" and "tprev".

Additions:

   + 'summary' command implemented in scavetool.


2008-07-04
----------

Fixes:

   + When new Apply/Compute dropped into the dataset, the editor crashed.

2008-06-13
----------

Fixes:

   + Relative file names in InputFile elements did not work.

   + Selection could be scrolled outside the plot area of the chart.

   + 'Delete' action of charts on the chart sheet was always disabled

   + When the charts reordered on the chart page, the modification was not saved.

Additions:

   + Add version number to scalar/vector files.

2008-05-23
----------

Additions:

   + New 'timetoserial' filter node: it replaces the X coordinates with their serial number.

   + Histogram charts have three options: show counts/probability density function/cumulative 
     density function.

Fixes:

   + Fix: mouse cursor did not always showed the mouse mode.

   + Preview canvas in LineChart edit dialog was broken.

   + Fix: index file finger print with VS7. (was "%lld" format string problem)

   + Bar chart layout: gap between groups are relative to the group width.

   + Property sheet displays parameters of the selected Apply/Compute operation.

2008-05-13
----------

Additions:

   + Generate default title for vector charts from the dataset by concatenating the 
     common fields.

Fixes:

   + Layout is refreshed after changing the operation in the Edit dialog of Apply/Compute, so
     the description is always visible.

   + Coordinate overflow message was drawn twice on vector chart and two message was
     visible after dragging the chart.
